--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,12 @@
-# Core libraries
-pandas>=1.3.0
-numpy>=1.20.0
-matplotlib>=3.4.0
+# Core dependencies identified from src/predict.py and pip freeze
+numpy==1.21.6
+pandas==1.3.5
+matplotlib==3.5.3
+scikit-learn==1.0.2
+statsmodels==0.13.5
+pmdarima==2.0.4
+tensorflow-gpu==2.10.0 # Requires compatible NVIDIA driver, CUDA Toolkit, and cuDNN
 
-# Data processing and metrics
-scikit-learn>=1.0.0
-
-# ARIMA models
-statsmodels>=0.13.0
-pmdarima>=1.8.0
-
-# LSTM models (TensorFlow)
-# Specify either tensorflow or tensorflow-cpu
-# tensorflow>=2.8.0  # For GPU support (requires CUDA and cuDNN)
-tensorflow-cpu>=2.8.0 # For CPU only
-
-# Optional: For Markdown output in main script (if uncommented)
-# tabulate>=0.8.9
+# Note: Other packages listed by 'pip freeze' might be dependencies
+# of these core packages or belong to the broader environment.
+# This list focuses on the direct imports found in the script.
